--- a/css/style.css
+++ b/css/style.css
@@ -1,58 +1,3 @@
-/* CUSTOM STYLESS */
-
-.myheader-title{
-  font-size: 3em;
-  font-weight: bold;
-}
-
-#mysmaller{
-font-size:1.8em;
-}
-
-.mydescription{
-font-family: 'Open Sans', sans-serif;
-}
-
-.opensans{
-font-family: 'Open Sans', sans-serif;
-}
-
-.bold{
-  font-weight: bold;
-}
-
-.mybutton{
-  color:white;
-  font-family: 'Open Sans', sans-serif;
-}
-
-.mybutton:hover{
-  color:white;
-}
-
-.materialicon{
-  font-family:"Material Design Icons";
-}
-
-.none{
-  text-decoration: none;
-  color:inherit
-}
-
-.work:hover{
-  color:#31b164;
-}
-
-.banner{
-  width: 100%;
-
-}
-
-.calendly-btn{
-margin-top:.5em;
-}
-
-
 /*-----------------------------------------------------------
 * Template Name    : Kerri | Responsive Bootstrap 4 Personal Template
 * Author           : SRBThemes
@@ -68,7 +13,7 @@ margin-top:.5em;
     2.HELPER
     3.NAVBAR
     4.HOME
-    5.ABOUT
+    5.ABOUT 
     6.SERVICES
     7.CLIENT
     8.WORK
@@ -278,14 +223,13 @@ button:focus {
 }
 
 .bg-overlay {
-    background-color: rgba(0, 0, 0, 0.6);
+    background-color: rgba(0, 0, 0, 0.69);
     position: absolute;
     top: 0;
     right: 0;
     width: 100%;
     height: 100%;
 }
-
 
 
 /*==========================
@@ -303,7 +247,7 @@ button:focus {
 }
 
 .custom-nav .navbar-nav li a {
-    color: rgba(255, 255, 255, 0.6) !important;
+    color: #fff !important;
     font-size: 15px;
     background-color: transparent !important;
     margin: 0 7px;
@@ -352,7 +296,7 @@ button:focus {
 }
 
 .custom-nav.stickyadd .navbar-nav li a {
-    color: rgba(0, 0, 0, 0.6) !important;
+    color: #000 !important;
 }
 
 
@@ -365,7 +309,6 @@ button:focus {
     position: relative;
     background-size: cover;
     background-position: center center;
-    clip-path: polygon(0 0, 100% 0, 100% 80%, 70% 100%, 0 80%);
 }
 
 .header-content {
@@ -393,6 +336,63 @@ button:focus {
     color: rgba(255, 255, 255, 0.75) !important;
 }
 
+.scroll_down {
+    position: absolute;
+    bottom: 5vh;
+    width: 100%;
+    text-align: center;
+    color: #fff;
+    font-size: 13px;
+    z-index: 8;
+}
+
+.scroll_down i {
+    position: relative;
+    -webkit-animation: bounce 2s infinite; 
+    animation: bounce 2s infinite; 
+    height: 44px;
+    width: 28px;
+    line-height: 54px;
+    border-radius: 30px;
+    border: 2px solid #ffffff;
+    display: inline-block;
+    color: #fff;
+    font-size: 10px;
+}
+
+.scroll_down i:after {
+    content: "";
+    position: absolute;
+    top: 22px;
+    left: 11px;
+    border-radius: 2px;
+    z-index: -1;
+    bottom: 0px;
+    transition: all .2s;
+    height: 10px;
+    width: 3px;
+    background: #fff;
+}
+
+/*HOME 4*/
+
+.curv-img {
+    position: absolute;
+    width: 100%;
+    bottom: 0px;
+    z-index: 1;
+}
+
+.curv-img svg {
+    display: block;
+}
+
+/*HOME 7*/
+
+.clip-home {
+    clip-path: polygon(0 0, 100% 0, 100% 83%, 50% 100%, 0 83%);
+    position: relative;
+}
 
 /*===========================
         5.ABOUT
@@ -673,7 +673,7 @@ button:focus {
     }
     .custom-nav .navbar-toggler {
         color: #000;
-        font-size: 26px;
+        font-size: 32px;
         border: none;
     }
     .custom-nav .logo .logo-dark {
@@ -687,9 +687,11 @@ button:focus {
     }
     .h-100vh {
         height: auto;
+        padding: 120px 0 140px;
     }
     .header-bg-img {
         clip-path: none;
+        padding: 120px 0 140px;
     }
     .custom-nav .navbar-nav li a {
         margin: 0 0px;
@@ -697,5 +699,14 @@ button:focus {
     }
     .header-name {
         font-size: 38px;
+    }
+    .clip-home{
+        clip-path: none;
+    }
+}
+
+@media (max-width: 2560px) {
+    .home-bg .curv-img {
+        bottom: -5px;
     }
 }
