--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@
     2.HELPER
     3.NAVBAR
     4.HOME
-    5.ABOUT 
+    5.ABOUT
     6.SERVICES
     7.CLIENT
     8.WORK
@@ -231,6 +231,15 @@ button:focus {
     height: 100%;
 }
 
+.bg-overlay-dark {
+    background-color: rgba(0, 0, 0, 0.75);
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+}
+
 
 /*==========================
         3.NAVBAR CUSTOM
@@ -311,6 +320,13 @@ button:focus {
     background-position: center center;
 }
 
+.header-bg-img-AI-1 {
+    background-image: url(../images/projects/AI-1.jpg);
+    position: relative;
+    background-size: cover;
+    background-position: center center;
+}
+
 .header-content {
     max-width: 800px;
 }
@@ -348,8 +364,8 @@ button:focus {
 
 .scroll_down i {
     position: relative;
-    -webkit-animation: bounce 2s infinite; 
-    animation: bounce 2s infinite; 
+    -webkit-animation: bounce 2s infinite;
+    animation: bounce 2s infinite;
     height: 44px;
     width: 28px;
     line-height: 54px;
