Added YOLO project

--- a/css/style.css
+++ b/css/style.css
@@ -327,6 +327,13 @@ button:focus {
     background-position: center center;
 }
 
+.header-bg-img-AI-2 {
+    background-image: url(../images/projects/AI-2.jpg);
+    position: relative;
+    background-size: cover;
+    background-position: center center;
+}
+
 .header-content {
     max-width: 800px;
 }
