--- a/css/style.css
+++ b/css/style.css
@@ -334,6 +334,13 @@ button:focus {
     background-position: center center;
 }
 
+.header-bg-img-AI-3 {
+    background-image: url(../images/projects/AI-3.jpg);
+    position: relative;
+    background-size: cover;
+    background-position: center center;
+}
+
 .header-content {
     max-width: 800px;
 }
