--- a/css/style.css
+++ b/css/style.css
@@ -611,7 +611,7 @@ button:focus {
 ========================*/
 
 .footer {
-  padding: 50px 0px 40px 0px;
+  padding: 65px 0px;
   background-color: #212121 !important;
 }
 
