--- a/css/style.css
+++ b/css/style.css
@@ -13,19 +13,19 @@
     12.RESPONSIVE
 ************************/
 
-@import url('https://fonts.googleapis.com/css?family=Montserrat:400,500,600|Nunito:400,600,700');
+@import url("https://fonts.googleapis.com/css?family=Montserrat:400,500,600|Nunito:400,600,700");
 
 /*======================
         1.BASIC
 ========================*/
 
 body {
-  font-family: 'Nunito', sans-serif;
+  font-family: "Nunito", sans-serif;
   overflow-x: hidden;
 }
 
 .mtsr {
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
 .hr {
@@ -39,7 +39,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
 a,
@@ -190,6 +190,24 @@ button:focus {
   box-shadow: none !important;
   text-transform: uppercase;
   outline: none !important;
+}
+
+.btn-light {
+  padding: 9px 18px;
+  font-size: 14px;
+  font-weight: 700;
+  transition: all 0.5s;
+  letter-spacing: 0.6px;
+  color: black;
+  box-shadow: none !important;
+  text-transform: uppercase;
+  outline: none !important;
+  border: 2px solid #f8f9fa;
+}
+
+.btn-light:hover {
+  background-color: #e2e6ea;
+  border: 2px solid #e2e6ea;
 }
 
 .btn-round {
@@ -356,7 +374,7 @@ button:focus {
 }
 
 .scroll_down i:after {
-  content: '';
+  content: "";
   position: absolute;
   top: 22px;
   left: 11px;
@@ -549,7 +567,7 @@ button:focus {
 }
 
 .work_box .work_img:after {
-  content: ' ';
+  content: " ";
   display: block;
   width: 100%;
   height: 100%;
